--- a/MNIST/MNIST_ANN_Tf_Keras.ipynb
+++ b/MNIST/MNIST_ANN_Tf_Keras.ipynb
@@ -34,6 +34,8 @@
     }
    ],
    "source": [
+    "import os\n",
+    "# ^^^ pyforest auto-imports - don't write above this line\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -704,6 +706,151 @@
     "\n",
     "#normalize it since it has values from 0 to 255\n",
     "sns.heatmap(img/255, annot=True, cmap=\"binary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-09T07:22:43.521329Z",
+     "start_time": "2022-06-09T07:22:43.130906Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import os'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving logs at: logs/fit\\Thu_Jun__9_002243_2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Create a log dir for tensorboard logs\n",
+    "\n",
+    "# time gives you unique folder name\n",
+    "import time\n",
+    "\n",
+    "def get_log_path(base_log_dir=\"logs/fit\"):\n",
+    "    #replace spaces with _\n",
+    "    uniqueName = time.asctime().replace(\" \", \"_\").replace(\":\", \"\")\n",
+    "    log_path = os.path.join(base_log_dir, uniqueName)\n",
+    "    print(f\"saving logs at: {log_path}\")\n",
+    "    return log_path\n",
+    "\n",
+    "log_dir = get_log_path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-09T07:23:14.615427Z",
+     "start_time": "2022-06-09T07:23:12.664172Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# write images using file writer \n",
+    "file_writer = tf.summary.create_file_writer(logdir=log_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-09T07:23:30.513799Z",
+     "start_time": "2022-06-09T07:23:15.825125Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with file_writer.as_default():\n",
+    "    #write 20 images from 10th index to 29th index\n",
+    "    images = np.reshape(X_train_full[10: 30], (-1,28,28,1)) ### (20, 28, 28, 1)\n",
+    "\n",
+    "    tf.summary.image(\"20 handwritten digit samples\", images, max_outputs=25, step=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-09T07:23:31.121556Z",
+     "start_time": "2022-06-09T07:23:31.107591Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 28, 28, 1)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-09T07:26:19.635980Z",
+     "start_time": "2022-06-09T07:26:19.060692Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-09T07:27:21.462046Z",
+     "start_time": "2022-06-09T07:26:21.130301Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ERROR: Timed out waiting for TensorBoard to start. It may still be running as pid 18444."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir logs/fit"
    ]
   },
   {
